# learn-haskell

./: .gitignore  test-primes.hs
hb-chapter-11/: car-plane.hs  map-tree.hs  new-type.hs  records.hs
hb-chapter-12/: exercises.hs  maybe-lib.hs
hb-chapter-14/: exercises.cabal  quick-check-exercises.hs
hb-chapter-2/: waxon.hs  where-examples.hs
hb-chapter-3/: change-mood.hs  list-ops.hs  print-2.hs  print.hs  scope.hs
hb-chapter-4/: greet-if-cool.hs  my-abs.hs  tuple-swap.hs
hb-chapter-5/: currying.hs  functions-for-sigs.hs  type-sigs.hs
hb-chapter-6/: days-of-week.hs  eq-instances.hs  ord-instances.hs  trivial.hs  type-check.hs
hb-chapter-7/: anonymous-fn.hs  case.hs  composition.hs  exercises.hs  guards.hs  higher-order-functions.hs  pattern-matching.hs  registered-user.hs
hb-chapter-8/: division.hs  fibonacci.hs
hb-chapter-9/: eft.hs  list-comprehensions.hs  my-head.hs  my-zip.hs  standard-functions.hs
playground/: pg.hs  playground.cabal  stack.yaml
playground/ch15/: monoid-exercises.hs  semigroup-exercises.hs
playground/ch16/: functor-exercises.hs
playground/ch17/: applicative-exercises.hs
playground/ch18/: either-monad.hs  monad-examples.hs
playground/ch21/: traversable-exercises.hs
playground/ch22/: reader-examples.hs  reader-implementation.hs
playground/ch23/: die.hs
playground/ch25/: bifunctor.hs  composing-types.hs
playground/ch26/: either-transformer.hs  (+1 more)
postgres-example/: LICENSE  postgres-example.cabal
simple-web-app/: simple-web-app.cabal
simple-web-app/app/: Main.hs
url-shortener/: shawty.cabal
(+3 files in other folders)
