name:                                simple-web-app
version:                             0.1.0.0
synopsis:                            A simple web app
description:                         Please see README.md
license:                             BSD3
license-file:                        LICENSE
author:                              Will Taylor
maintainer:                          willtaylor.developer@gmail.com
copyright:                           2020, Will Taylor
category:                            Web
build-type:                          Simple
cabal-version:                       >=1.10

executable simple
  hs-source-dirs:       app
  main-is:              Main.hs
  ghc-options:          -threaded -rtsopts -with-rtsopts=-N
  build-depends:        base
                        , scotty
                        , blaze-html
                        , blaze-markup
                        , wai-middleware-static
  default-language:       Haskell2010